Update endpoint /api/members-sorted-by-last-registration-date
The point is to return all members, both up to date and not up to date ones.

So this commit applies those changes to this endpoint:
- remove the parameter "since" because it is not used in practice
- add in the response a field isRegistrationUpToDate (because it may
  return both members up to date and some not)
- don't give guarantee on the order of the items in the response because
  it makes the back slightly simpler that way and because there are less
  implicit hypothesis on what this endpoint does
- change the route to reflect the new behavior

So its impact are:
- it changes the name of the generated classes (which is not great, we
  should perhaps leverage the OpenApi "schemas" to have model names
  independent of the endpoint route)
- adaptation of the tests (remove assertions on removed stuff and adapt
  the checks now that the result is in a random order)
- remove as ad hoc sql method in MemberRepository which is not called
  anymore
- adapt the front so that it still initially displays a sorted list
